[project]
name = "autodrive-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gym-unity==0.26.0",
    "mlagents-envs==0.26.0",
    "numpy==1.23.5",
    "protobuf==3.20.3",
    "sheeprl",
]
[tool.uv.sources]
sheeprl = { path = "./sheeprl" }
